Added 2 more recipes for mujaddara and tomato pasta. fixed title for all pages

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <a href="recipes/brownies.html">Cocoa Brownies Recipe</a>
+    <ul>
+        <li><a href="recipes/brownies.html" rel="noopener">Cocoa Brownies Recipe</a></li>
+        <li><a href="recipes/dried-tomato-pasta.html" rel="noopener">Dried Cherry Tomato Pasta</a></li>
+        <li><a href="recipes/mujaddara.html" rel="noopener">Mujaddara</a></li>
+    </ul>
 </body>
 </html>
