--- a/recipes/mujaddara.html
+++ b/recipes/mujaddara.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Cocoa Brownies</h1>
+    <h1>Mujaddara</h1>
     <img src="https://lh4.googleusercontent.com/proxy/YAcxH9FBo0-Pu1d6wCH1alXkeccr0HGZaR_pf_JrKgV4tBDDnldt2JWbE6HSgScsMBTDbdC6zEqq2nIZgZPp7I1IXI2mC1tfSP5CyC11"
     alt="bowl of mujaddara" width="200">
     <h2>The best lentil and rice meal from the middle east</h2>
