Added styling to all recipe pages

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -7,27 +7,38 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Cocoa Brownies</h1>
-    <img src="https://assets.bonappetit.com/photos/5991b8998b35682fb649f7a0/1:1/w_960,c_limit/basically-chocolate-brownies%20brighter.jpg"
-    alt="dark cocoa brownies" width="200">
-    <h2>Dark brownies made with all the cocoa and no chocolate</h2>
-    <p>Simple but Efficient. This simple brownie recipe is sure to blow your mind.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>Butter</li>
-        <li>Sugar</li>
-        <li>Salt</li>
-        <li>Cocoa</li>
-        <li>2 Eggs</li>
-        <li>Vanilla</li>
-        <li>Flour</li>
-    </ul>
-    <ol>
-        <li>Melt butter</li>
-        <li>Whisk together sugar, cocoa and salt</li>
-        <li>Pour melted butter on dry ingredients while continuing to whisk</li>
-        <li>Add eggs one at a time while continuing to mix</li>
-        <li>Add flour, dont overmix</li>
-    </ol>
+    <div class="mega-section">
+        <h1>Cocoa Brownies</h1>
+        <div class="centered-image">
+            <img src="https://assets.bonappetit.com/photos/5991b8998b35682fb649f7a0/1:1/w_960,c_limit/basically-chocolate-brownies%20brighter.jpg"
+            alt="dark cocoa brownies" width="300">
+        </div>
+        <div class="section">
+            <h2>Dark brownies made with all the cocoa and no chocolate</h2>
+            <p>Simple but Efficient. This simple brownie recipe is sure to blow your mind.</p>
+        </div>
+        <div class="section">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>Butter</li>
+                <li>Sugar</li>
+                <li>Salt</li>
+                <li>Cocoa</li>
+                <li>2 Eggs</li>
+                <li>Vanilla</li>
+                <li>Flour</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h3>Instructions</h3>
+            <ol>
+                <li>Melt butter</li>
+                <li>Whisk together sugar, cocoa and salt</li>
+                <li>Pour melted butter on dry ingredients while continuing to whisk</li>
+                <li>Add eggs one at a time while continuing to mix</li>
+                <li>Add flour, dont overmix</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
