--- a/recipes/mujaddara.html
+++ b/recipes/mujaddara.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Mujaddara</h1>
-    <img src="https://lh4.googleusercontent.com/proxy/YAcxH9FBo0-Pu1d6wCH1alXkeccr0HGZaR_pf_JrKgV4tBDDnldt2JWbE6HSgScsMBTDbdC6zEqq2nIZgZPp7I1IXI2mC1tfSP5CyC11"
+    <img class="centered-image" src="https://lh4.googleusercontent.com/proxy/YAcxH9FBo0-Pu1d6wCH1alXkeccr0HGZaR_pf_JrKgV4tBDDnldt2JWbE6HSgScsMBTDbdC6zEqq2nIZgZPp7I1IXI2mC1tfSP5CyC11"
     alt="bowl of mujaddara" width="200">
     <h2>The best lentil and rice meal from the middle east</h2>
     <p>Great and healthy meal, and its totally vegan!</p>
